@@ -5,6 +5,7 @@ import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.KeySpec;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.NoSuchPaddingException;
@@ -12,9 +13,6 @@ import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import javax.crypto.spec.DESedeKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class PasswordHelper
 {
@@ -105,8 +103,8 @@ public class PasswordHelper
 			byte[] cleartext = unencryptedString.getBytes( UNICODE_FORMAT );
 			byte[] ciphertext = cipher.doFinal( cleartext );
 
-			BASE64Encoder base64encoder = new BASE64Encoder();
-			return base64encoder.encode( ciphertext );
+			String encoded = Base64.getEncoder().encodeToString(ciphertext);
+			return encoded;
 		}
 		catch (Exception e)
 		{
@@ -123,11 +121,10 @@ public class PasswordHelper
 		{
 			SecretKey key = keyFactory.generateSecret( keySpec );
 			cipher.init( Cipher.DECRYPT_MODE, key );
-			BASE64Decoder base64decoder = new BASE64Decoder();
-			byte[] cleartext = base64decoder.decodeBuffer( encryptedString );
+			byte[] cleartext = Base64.getDecoder().decode(encryptedString);
 			byte[] ciphertext = cipher.doFinal( cleartext );
 
-			return bytes2String( ciphertext );
+			return bytes2String( ciphertext);
 		}
 		catch (Exception e)
 		{
